# responsible-ai-finserv

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
docs/: pm-guide-responsible-ai.md
examples/: classifier_pipeline.py  sample_documents.py
rai_finserv/: __init__.py  audit_chain.py  confidence_gate.py  drift_monitor.py  explainability_wrapper.py  hitl_queue.py
